# time-tracker

./: .env  .gitignore  Cargo.toml  README.md  config.toml  time-tracker.db
src/: main.rs  routes.rs  templates.rs
src/database/: index.rs
src/middleware/: authority.rs  login.rs  mod.rs  session.rs
src/pages/: home.rs  index.rs  login.rs  logout.rs  mod.rs  settings.rs
src/pages/admin/: mod.rs  user_details.rs  users.rs
src/pages/helper/: authority.rs  index.rs  mod.rs
src/utils/: config.rs
templates/: app.html  home.html  login.html  navbar.html  settings.html
templates/admin/: user_details.html  users.html
templates/modal/: absence.html  edit_absence.html  edit_entry.html  entry.html
